--- a/accounts/templates/accounts/account.html
+++ b/accounts/templates/accounts/account.html
@@ -11,7 +11,7 @@
     <div class="absolute top-0 w-full h-full bg-center bg-cover" style="
           background-image: url('https://images.unsplash.com/photo-1499336315816-097655dcfbda?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=2710&amp;q=80');
         ">
-      <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
+      <span id="blackOverlay" class="w-full h-full absolute dark:opacity-50 opacity-0 bg-black"></span>
     </div>
     <div class="top-auto bottom-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden h-[70px]" style="transform: translateZ(0px)">
       <svg class="absolute bottom-0 overflow-hidden" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" version="1.1" viewBox="0 0 2560 100" x="0" y="0">
@@ -23,10 +23,11 @@
     <div class="container mx-auto px-4">
       <div class="relative flex flex-col min-w-0 break-words bg-base-100 w-full mb-6 shadow-xl rounded-lg -mt-64">
         <div class="px-6">
-          <!-- CASE 1 : VISITING OTHER USER'S PROFILE PAGE-->
-          {% if user != account %}
-          <div class="flex flex-wrap justify-center"> <!-- Top banner -->
-            <div class="w-full lg:w-3/12 px-4 lg:order-2 flex justify-center"> <!-- profile pic-->
+
+          <!-- Top banner -->
+          <div class="flex flex-wrap justify-center">
+            <!-- profile pic-->
+            <div class="w-full lg:w-3/12 px-4 lg:order-2 flex justify-center">
               <div class="relative">
                 {% if account.profile_picture %}
                   {% thumbnail account.profile_picture "150x150" crop="center" as im %}
@@ -43,7 +44,10 @@
                 {% endif %}
               </div>
             </div>
+            <!-- CASE 1 : VISITING OTHER USER'S PROFILE PAGE-->
+            {% if user != account %}
             <div class="w-full lg:w-4/12 px-4 lg:order-3 lg:text-right lg:self-center">
+              <!-- CONNECTION BUTTONS -->
               <div class="max-[640px]:text-center py-6 px-3 mt-32 sm:mt-0">
                 {% if friendship_exists %}
                   <button class="btn btn-disabled">
@@ -54,22 +58,24 @@
                   </button>
                 {% else %}
                   {% if request_to_exists %}
-                  <form method="POST"> <!-- UNDO (REQUEST SENT) -->
+                  <!-- UNDO (REQUEST SENT) -->
+                  <form method="POST">
                     {% csrf_token %}
                     <div class="tooltip tooltip-top tooltip-error" data-tip="click to cancel request">
-                      <input type="submit" name="undo_request_form" class="btn btn-success opacity-50 border-2 border-emerald-700" value="Request Sent"></input>
+                      <button type="submit" name="undo_request_form" class="btn btn-success opacity-50 border-2 border-emerald-700"><span class="loading loading-spinner"></span>Request Sent</button>
                     </div>
                   </form>
                   {% elif request_from_exists %}
-                  <form method="POST"> <!-- ACCEPT CONNECTION REQUEST-->
+                  <!-- ACCEPT CONNECTION REQUEST-->
+                  <form method="POST">
                     {% csrf_token %}
-                    <div class="form-control w-full max-w-xs grid grid-cols-1 space-y-2">
+                    <div class="mt-32 lg:mt-0 grid grid-cols-1 space-y-2">
                       <input type="submit" name="accept_form" class="btn btn-outline btn-info" value="Accept connection request">
 
-                      <label class="label">
-                        <span class="label-text">select relation type</span>
-                      </label>
                       <!-- SELECT RELATION TYPE -->
+                      <label class="label">
+                        <p class="label-text">Who is <span class="font-bold">{% firstof account.first_name account.email %}</span> to you ?</p>
+                      </label>
                       <select class="select select-bordered" name="relation_type" id="id_relation_type">
                         {% for option in accept_form.relation_type %}
                         {{option}}
@@ -80,69 +86,59 @@
                   {% else %}
                   <form method="POST"> <!-- REQUEST FRIENDSHIP -->
                     {% csrf_token %}
-                    <input type="submit" name="request_form" class="btn btn-outline" value="Request Friendship">
+                    <button type="submit" name="request_form" class="btn btn-outline">
+                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 sm:w-6 h-5 sm:h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M13.19 8.688a4.5 4.5 0 011.242 7.244l-4.5 4.5a4.5 4.5 0 01-6.364-6.364l1.757-1.757m13.35-.622l1.757-1.757a4.5 4.5 0 00-6.364-6.364l-4.5 4.5a4.5 4.5 0 001.242 7.244" />
+                      </svg>
+                      Connect
+                    </button>
                   </form>
                   {% endif %}
                 {% endif %}
               </div>
             </div>
+            <!-- dashboard -->
             <div class="w-full lg:w-4/12 px-4 lg:order-1">
               <div class="flex justify-center py-4 lg:pt-4 pt-8">
                 <div class="mr-4 p-3 text-center">
-                  <span class="text-xl font-bold block uppercase tracking-wide ">22</span><span class="text-sm text-gray-400">Friends</span>
+                  <span class="text-xl font-bold block uppercase tracking-wide ">{{number_of_relations}}</span><span class="text-sm text-gray-400">Connections</span>
                 </div>
                 <div class="mr-4 p-3 text-center">
-                  <span class="text-xl font-bold block uppercase tracking-wide ">10</span><span class="text-sm text-gray-400">Photos</span>
+                  <span class="text-xl font-bold block uppercase tracking-wide ">{{number_of_photos}}</span><span class="text-sm text-gray-400">Photos</span>
                 </div>
                 <div class="lg:mr-4 p-3 text-center">
-                  <span class="text-xl font-bold block uppercase tracking-wide ">89</span><span class="text-sm text-gray-400">Comments</span>
+                  <span class="text-xl font-bold block uppercase tracking-wide ">{{number_of_comments}}</span><span class="text-sm text-gray-400">Comments</span>
                 </div>
               </div>
             </div>
           </div>
           <!-- CASE 2 : USER'S OWN PROFILE PAGE-->
           {% else %}
-          <div class="flex flex-wrap justify-center"> <!-- Top banner -->
-            <div class="w-full lg:w-3/12 px-4 lg:order-2 flex justify-center"> <!-- profile pic-->
-              <div class="relative">
-                {% if account.profile_picture %}
-                  {% thumbnail account.profile_picture "150x150" crop="center" as im %}
-                    <img alt="..." src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}"
-                    class="shadow-xl rounded-full h-auto align-middle border-none absolute -m-16 -ml-20 lg:-ml-16 max-w-fit"
-                    >
-                  {% endthumbnail %}
-                {% else %}
-                  {% thumbnail "../../../media/profile_pictures/default.jpg" "150x150" crop="center" as im %}
-                    <img alt="..." src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}"
-                    class="shadow-xl rounded-full h-auto align-middle border-none absolute -m-16 -ml-20 lg:-ml-16 max-w-fit"
-                    >
-                  {% endthumbnail %}
-                {% endif %}
-              </div>
+          <div class="w-full lg:w-4/12 px-4 lg:order-3 lg:text-right lg:self-center">
+            <!-- SETTINGS -->
+            <div class="max-[640px]:text-center py-6 px-3 mt-32 sm:mt-0">
+              <a href="{% url 'accounts:edit_account' user.pk %}" class="btn btn-outline" type="button">
+                <svg class="w-5 h-5 stroke-current"  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4"></path></svg>
+                settings
+              </a>
             </div>
-            <div class="w-full lg:w-4/12 px-4 lg:order-3 lg:text-right lg:self-center">
-              <div class="max-[640px]:text-center py-6 px-3 mt-32 sm:mt-0">
-                <a href="{% url 'accounts:edit_account' user.pk %}"" class="btn btn-outline" type="button">
-                  <svg class="w-5 h-5 stroke-current"  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4"></path></svg>
-                  settings
-                </a>
+          </div>
+          <!-- dashboard -->
+          <div class="w-full lg:w-4/12 px-4 lg:order-1">
+            <div class="flex justify-center py-4 lg:pt-4 pt-8">
+              <div class="mr-4 p-3 text-center">
+                <span class="text-xl font-bold block uppercase tracking-wide ">{{number_of_relations}}</span><span class="text-sm text-gray-400">Connections</span>
               </div>
-            </div>
-            <div class="w-full lg:w-4/12 px-4 lg:order-1">
-              <div class="flex justify-center py-4 lg:pt-4 pt-8">
-                <div class="mr-4 p-3 text-center">
-                  <span class="text-xl font-bold block uppercase tracking-wide ">22</span><span class="text-sm text-gray-400">Friends</span>
-                </div>
-                <div class="mr-4 p-3 text-center">
-                  <span class="text-xl font-bold block uppercase tracking-wide ">10</span><span class="text-sm text-gray-400">Photos</span>
-                </div>
-                <div class="lg:mr-4 p-3 text-center">
-                  <span class="text-xl font-bold block uppercase tracking-wide ">89</span><span class="text-sm text-gray-400">Comments</span>
-                </div>
+              <div class="mr-4 p-3 text-center">
+                <span class="text-xl font-bold block uppercase tracking-wide ">{{number_of_photos}}</span><span class="text-sm text-gray-400">Photos</span>
+              </div>
+              <div class="lg:mr-4 p-3 text-center">
+                <span class="text-xl font-bold block uppercase tracking-wide ">{{number_of_comments}}</span><span class="text-sm text-gray-400">Comments</span>
               </div>
             </div>
           </div>
-          {% endif %}
+        </div>
+        {% endif %}
 
           <!-- USER INFOS -->
           <div class="text-center mt-12">
@@ -181,12 +177,12 @@
             </div>
           </div>
 
-          <div class="mt-10 py-10 border-t border-gray-200 text-center">
+          <div class="mt-10 py-8 border-t border-gray-200 text-center">
             {% if user == account %}
               <!-- SHOW LIST OF RELATIONS -->
               <div class="my-10 p-4 bg-base-200 w-full max-w-4xl rounded-xl">
                 <div class="py-2 flex gap-4 items-center">
-                  <h1 class="text-2xl font-semibold">Related accounts</h1>
+                  <h1 class="text-2xl font-semibold">Connected accounts</h1>
                   <svg class="w-5 h-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52" enable-background="new 0 0 52 52" xml:space="preserve" transform="rotate(-45)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <path d="M17.3,36.1l-1.1-1.4c0,0-0.7-1-0.9-1.6c-0.2-0.3-0.5-0.5-0.9-0.5h-0.6c-3.5,0-6.5-2.6-6.7-6 c-0.3-3.8,2.8-6.9,6.5-6.9h9.1c1.2,0,2.3,0.4,3.2,0.8c1.2,0.7,2.2,1.8,2.7,3.1c0.3,0.8,0.5,1.6,0.5,2.6c0,0.5-0.1,0.9-0.2,1.4 c-0.2,0.7,0.3,1.3,1,1.2l3.4,0c0.5,0,0.8-0.4,1-0.8c0.1-0.6,0.1-1.2,0.1-1.8c0-0.8-0.1-1.7-0.3-2.6c-0.3-1.4-0.9-2.7-1.7-3.9 c-1.5-2.2-3.8-4-6.4-4.7c-1-0.3-2.2-0.5-3.2-0.5H14c-6.3,0-11.7,4.9-11.9,11.2c-0.3,6.6,5,12.1,11.6,12.1h3 C17.4,37.7,17.8,36.7,17.3,36.1z M49.9,25.6c-0.2-6.3-5.6-11.3-11.9-11.2l-2.7-0.1c-0.8,0-1.3,1-0.8,1.6c0.8,0.9,1.4,1.9,2,3 c0.2,0.3,0.5,0.5,0.9,0.5H38c3.5,0,6.5,2.6,6.7,6c0.3,3.8-2.8,6.9-6.5,6.9l-9.1,0c-1.2,0-2.3-0.4-3.2-0.8c-1.2-0.7-2.2-1.8-2.7-3.1 c-0.3-0.8-0.5-1.6-0.5-2.6c0-0.5,0.1-0.9,0.2-1.4c0.2-0.7-0.3-1.3-1-1.2h-3.4c-0.5,0-0.8,0.4-1,0.8c-0.1,0.6-0.1,1.2-0.1,1.8 c0,0.8,0.1,1.8,0.3,2.6c0.3,1.4,0.9,2.7,1.7,3.8c1.5,2.2,3.8,4,6.4,4.7c1,0.3,2.2,0.5,3.2,0.5l9.1,0C44.8,37.7,50.1,32.2,49.9,25.6 z"></path> </g> </g></svg>
                 </div>
 
@@ -290,13 +286,30 @@
 
           {% if user != account %}
             {% if friendship_exists %}
-              <div class="p-4 text-center grid grid-cols-1 space-y-2">
-                <p>you are connected with {% if account.first_name %}{{account.first_name}}{% else %}{{account.email}}{% endif %}</p>
-                <form method="POST"> <!-- CANCEL FRIENDSHIP -->
+            <div class="flex flex-col w-full my-8">
+              <div class="grid h-20 card bg-base-300 rounded-box place-items-center">
+                  <form action="" class="inline-flex">
+                    <p>you are connected with {% if account.first_name %}{{account.first_name}}{% else %}{{account.email}}{% endif %} as</p>
+                    <select class="ml-2 select select-xs" name="relation_type" id="id_relation_type">
+                      <option value="test">test</option>
+                    </select>
+                  </form>
+              </div>
+              <div class="divider"></div>
+              <!-- DISCONNECT -->
+              <div class="grid h-20 card bg-base-300 rounded-box place-items-center">
+                <form method="POST">
                   {% csrf_token %}
-                  <input type="submit" name="delete_form" class="btn btn-outline btn-error" value="disconnect">
+                  <button type="submit" name="delete_form" class="btn btn-outline btn-error">
+                    <span>
+                      <svg class="w-5 h-5 stroke-current stroke-2" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"> <path id="Vector" d="M16 20V18M18 16H20M7.04996 11.293L5.63574 12.7072C4.07365 14.2693 4.07466 16.8016 5.63675 18.3637C7.19885 19.9258 9.7308 19.9262 11.2929 18.3641L12.7076 16.9497M6 8H4M8 4V6M11.293 7.05044L12.7072 5.63623C14.2693 4.07413 16.8016 4.07368 18.3637 5.63578C19.9258 7.19787 19.9254 9.7308 18.3633 11.2929L16.9492 12.7071" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+                    </span>
+                    disconnect
+                  </button>
                 </form>
               </div>
+            </div>
+
             {% endif %}
           {% endif %}
         </div>
