--- a/accounts/templates/accounts/notifications.html
+++ b/accounts/templates/accounts/notifications.html
@@ -4,28 +4,49 @@
 
 {% block body %}
 <div class="bg-base-100">
-  <div class="mx-auto max-w-2xl px-6 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
+  <div class="mx-auto max-w-2xl px-6 py-16 sm:px-6 sm:py-24  lg:px-8">
     <h1 class="text-3xl font-semibold">Notification Panel</h1>
 
     <div class="flex-1 px-4 mt-5 sm:px-5">
       <div class="px-4 sm:px-5">
-        <div class="h-full rounded-md">
+        {% if messages %}
+        {% for message in messages %}
+          <div class="my-6 alert alert-success mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
+            <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+            <span>{{message}}</span>
+          </div>
+        {% endfor %}
+        {% endif %}
+        <p class="font-bold text-lg px-6 py-4">{{notifs_count}} request{{notifs_count|pluralize}}:</p>
 
-          <p class="font-bold text-lg px-6 py-4">{{notifs_count}} request{{notifs_count|pluralize}}:</p>
+        {% for notification in all_notifications %}
+          <div class="grid grid-cols-1 place-content-center">
+              <form method="POST">
+                  {% csrf_token %}
+                  <div class="grid w-full rounded-lg bg-base-100 p-6 shadow-lg border" data-aos="fade-up">
+                    {% if notification.content_type.model == 'albumaccess' %}
+                        {% include 'partials/album_access_notification.html' %}
+                    {% elif notification.content_type.model == 'relationrequest' %}
+                        {% include 'partials/relation_request_notification.html' %}
+                    {% elif notification.content_type.model == 'comment' %}
+                        {% include 'partials/new_comment_notification.html' %}
+                    {% endif %}
+                  </div>
+              </form>
+          </div>
+        {% endfor %}
 
-          {% for notification_type, notifications in categorized_notifications.items %}
-            {% for notification in notifications %}
-            <div class="grid grid-cols-1 place-content-center">
-              {% if notification_type == 'album_access' %}
-              <div class="grid w-full rounded-lg bg-base-100 p-6 shadow-lg border">
-                <div class="inline-flex gap-4">
-                  <h5 class="mb-2 text-xl font-medium leading-tight">
-                    Album Access granted
-                  </h5>
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 15.75l5.159-5.159a2.25 2.25 0 013.182 0l5.159 5.159m-1.5-1.5l1.409-1.409a2.25 2.25 0 013.182 0l2.909 2.909m-18 3.75h16.5a1.5 1.5 0 001.5-1.5V6a1.5 1.5 0 00-1.5-1.5H3.75A1.5 1.5 0 002.25 6v12a1.5 1.5 0 001.5 1.5zm10.5-11.25h.008v.008h-.008V8.25zm.375 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
-                  </svg>
-                </div>
+                        <!-- <br>
+                        {{notification.content_object.album.photos_album.first.image}} -->
+
+
+        <!-- Seen notifications -->
+        <br><br>
+        {% for notification in seen_notifications %}
+          <div class="grid grid-cols-1 place-content-center opacity-50">
+            <form method="POST">
+              {% csrf_token %}
+              <div class="grid w-full rounded-lg bg-base-100 p-6 shadow-lg border" data-aos="fade-up">
                 <p class="mb-1 text-base">
                   {{notification.message}}
                 </p>
@@ -33,61 +54,19 @@
                   <small class="">{{notification.created_at|timesince}} ago</small>
                 </p>
                 <div class="inline-flex gap-4">
-                  <a href="{% url 'albums:album_detail' notification.content_object.album.pk %}" class="btn btn-info">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
-                      <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 010-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178z" />
-                      <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
-                    </svg>
-                    See Album
-                  </a>
-                  <button type="button" class="btn">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
-                      <path stroke-linecap="round" stroke-linejoin="round" d="M3.98 8.223A10.477 10.477 0 001.934 12C3.226 16.338 7.244 19.5 12 19.5c.993 0 1.953-.138 2.863-.395M6.228 6.228A10.45 10.45 0 0112 4.5c4.756 0 8.773 3.162 10.065 7.498a10.523 10.523 0 01-4.293 5.774M6.228 6.228L3 3m3.228 3.228l3.65 3.65m7.894 7.894L21 21m-3.228-3.228l-3.65-3.65m0 0a3 3 0 10-4.243-4.243m4.242 4.242L9.88 9.88" />
-                    </svg>
-                    Mark as seen
-                  </button>
-                </div>
-              </div>
-                          <!-- <br>
-                          {{notification.content_object.album.photos_album.first.image}} -->
 
-              {% elif notification_type == 'relation_request' %}
-              <div class="grid w-full rounded-lg bg-base-100 p-6 shadow-lg border">
-                <div class="inline-flex gap-4">
-                  <h5 class="mb-2 text-xl font-medium leading-tight">
-                    Connection request
-                  </h5>
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M19 7.5v3m0 0v3m0-3h3m-3 0h-3m-2.25-4.125a3.375 3.375 0 11-6.75 0 3.375 3.375 0 016.75 0zM4 19.235v-.11a6.375 6.375 0 0112.75 0v.109A12.318 12.318 0 0110.374 21c-2.331 0-4.512-.645-6.374-1.766z" />
-                  </svg>
-                </div>
-                <p class="mb-1 text-base">
-                  {{notification.message}}
-                </p>
-                <p class="mb-4 text-base">
-                  <small class="">{{notification.created_at|timesince}} ago</small>
-                </p>
-                <div class="inline-flex gap-4">
-                  <a href="{% url 'accounts:account_view' notification.content_object.user_sending.pk %}" class="btn btn-info">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
-                      <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 010-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178z" />
-                      <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+                  <button type="submit" class="btn btn-error max-sm:btn-block" name="delete_notif" value="{{notification.id}}">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
                     </svg>
-                    See User
-                  </a>
-                  <button type="button" class="btn">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
-                      <path stroke-linecap="round" stroke-linejoin="round" d="M3.98 8.223A10.477 10.477 0 001.934 12C3.226 16.338 7.244 19.5 12 19.5c.993 0 1.953-.138 2.863-.395M6.228 6.228A10.45 10.45 0 0112 4.5c4.756 0 8.773 3.162 10.065 7.498a10.523 10.523 0 01-4.293 5.774M6.228 6.228L3 3m3.228 3.228l3.65 3.65m7.894 7.894L21 21m-3.228-3.228l-3.65-3.65m0 0a3 3 0 10-4.243-4.243m4.242 4.242L9.88 9.88" />
-                    </svg>
-                    Mark as seen
+                    Delete
                   </button>
                 </div>
               </div>
-              {% endif %}
-            </div>
-            {% endfor %}
-          {% endfor %}
-        </div>
+            </form>
+          </div>
+        {% endfor %}
+
       </div>
     </div>
   </div>
