--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -7,6 +7,10 @@
 <head>
   <link rel="stylesheet" href="{% static 'css/output.css' %}">
 
+  <!-- AOS Animate On Scroll -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}{% endblock title %} | æternam </title>
@@ -32,25 +36,24 @@
           </label>
           <div tabindex="0" class="mt-3 z-[1] card card-compact dropdown-content w-52 bg-base-100 shadow-xl">
             <div class="card-body">
-              {% if categorized_notifications|is_notif %}
+              {% if all_notifications %}
                 <span class="font-bold text-lg">{{notifs_count}} request{{notifs_count|pluralize}}:</span>
-                {% for notification_type, notifications in categorized_notifications.items %}
-                  {% for notification in notifications %}
-                    {% if notification_type == 'album_access' %}
-                      <a href="{% url 'albums:album_detail' notification.content_object.album.pk %}" class="bg-info/50 rounded-xl p-2">
-                        <span class="">{{notification.message}}</span>
-                      </a>
-                    {% elif notification_type == 'relation_request' %}
-                      <a href="{% url 'accounts:account_view' notification.content_object.user_sending.pk %}" class="bg-info/50 rounded-xl p-2">
-                        <span >{{notification.message}}</span>
-                      </a>
-                    {% endif %}
-                  {% endfor %}
+                {% for notification in all_notifications %}
+                  <a
+                  {% if notification.content_type.model == 'albumaccess' %}
+                  href="{% url 'albums:album_detail' notification.content_object.album.pk %}"
+                  {% elif notification.content_type.model == 'relationrequest' %}
+                  href="{% url 'accounts:account_view' notification.content_object.user_sending.pk %}"
+                  {% elif notification.content_type.model == 'comment' %}
+                  href="{% url 'photos:photo_detail' notification.content_object.commented_photo.pk %}"
+                  {% endif %}
+                  class="bg-info/50 rounded-xl p-2">
+                    <span class="">{{notification.message}}</span>
+                  </a>
                 {% endfor %}
                 <a class="btn" href="{% url 'accounts:notifications_view' %}">
                   See all
                 </a>
-
               {% else %}
                 <span class="font-bold text-lg">No notifications</span>
               {% endif %}
@@ -190,4 +193,9 @@
 
   <script src="{% static 'js/script.js' %}"></script>
 
+  <!-- AOS for notifications panel-->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+
+  <script>AOS.init();</script>
 </html>
