--- a/accounts/templates/accounts/notifications.html
+++ b/accounts/templates/accounts/notifications.html
@@ -7,8 +7,8 @@
   <div class="mx-auto max-w-2xl px-6 py-16 sm:px-6 sm:py-24  lg:px-8">
     <h1 class="text-3xl font-semibold">Notification Panel</h1>
 
-    <div class="flex-1 px-4 mt-5 sm:px-5">
-      <div class="px-4 sm:px-5">
+    <div class="flex-1 mt-5 sm:px-5">
+      <div class="sm:px-5">
         {% if messages %}
         {% for message in messages %}
           <div class="my-6 alert alert-success mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
@@ -17,7 +17,7 @@
           </div>
         {% endfor %}
         {% endif %}
-        <p class="font-bold text-lg px-6 py-4">{{notifs_count}} request{{notifs_count|pluralize}}:</p>
+        <p class="font-bold text-lg px-6 py-4">{{notifs_count}} notification{{notifs_count|pluralize}}:</p>
 
         {% for notification in all_notifications %}
           <div class="grid grid-cols-1 place-content-center">
