--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -4,7 +4,7 @@
 {% block title %}Welcome{% endblock %}
 
 {% block body %}
-<div class="hero min-h-screen" style="background-image: url(../../../media/images/laura-fuhrman-73OJLcahQHg-unsplash.jpg);">
+<div class="hero min-h-screen" style="background-image: url(https://images.unsplash.com/photo-1528569937393-ee892b976859?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80);">
   <div class="hero-overlay bg-opacity-60"></div>
   <div class="hero-content text-center text-neutral-content">
     <div class="max-w-md">
